<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/customBackground"
    tools:context=".ModifyContactActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="30dp"
            android:paddingBottom="30dp">

            <LinearLayout
                android:id="@+id/linearLayoutContact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@+id/linearLayoutContact2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageButton
                    android:id="@+id/imageEdit"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@android:mipmap/sym_def_app_icon"
                    android:contentDescription="@string/avatar" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/firstNameEdit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:ems="6"
                        android:hint="@string/hint_first_name"
                        android:inputType="textPersonName"
                        android:textSize="25sp"
                        android:autofillHints="First name" />

                    <EditText
                        android:id="@+id/lastNameEdit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:ems="6"
                        android:hint="@string/hint_last_name"
                        android:inputType="textPersonName"
                        android:textSize="25sp"
                        android:importantForAutofill="no"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutContact2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/linearLayoutContact"
                app:layout_constraintStart_toStartOf="@+id/linearLayoutContact"
                app:layout_constraintTop_toBottomOf="@+id/linearLayoutContact">

                <EditText
                    android:id="@+id/numberEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="15dp"
                    android:ems="8"
                    android:hint="@string/hint_number"
                    android:inputType="phone"
                    android:textSize="20sp"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayoutContact"
                    android:autofillHints="Number" />

                <EditText
                    android:id="@+id/emailEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="15dp"
                    android:ems="8"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    android:textSize="20sp"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayoutContact"
                    android:importantForAutofill="no"/>

                <EditText
                    android:id="@+id/addressEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="15dp"
                    android:ems="8"
                    android:hint="@string/hint_address"
                    android:inputType="text"
                    android:textSize="20sp"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayoutContact"
                    android:importantForAutofill="no"/>

                <Button
                    android:id="@+id/save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:text="@string/action_save"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:text="@string/action_delete"
                    android:textSize="15sp"
                    app:backgroundTint="?attr/colorDelete" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
